--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -487,8 +487,6 @@ jobs:
 
       - name: 'terraform plan'
         run: |
-           ssh rd_test '
-           sudo -i
            cd /home/ubuntu/sunny/Invideo_task_aws/
            echo -e "\n\n"
            pwd
@@ -499,7 +497,7 @@ jobs:
            echo -e "\n\n"
            whoami
            cd /home/ubuntu/sunny/Invideo_task_aws/
-           terraform plan -out=aws.tfplan  -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}" '
+           terraform plan -out=aws.tfplan  -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
         continue-on-error: ${{ fromJSON(env.continue) }}
         timeout-minutes: ${{ fromJSON(env.time) }}
 
