--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -487,18 +487,13 @@ jobs:
 
       - name: 'terraform plan'
         run: |
-           ssh -t rd_test '
            cd /home/ubuntu/sunny/Invideo_task_aws/
            echo -e "\n\n"
            pwd
            echo -e "\n\n"
            whoami
-           echo -e "\n\n"
-           sudo -i
-           echo -e "\n\n"
-           whoami
            cd /home/ubuntu/sunny/Invideo_task_aws/
-           terraform plan -out=aws.tfplan  -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}" '
+           terraform plan -out=aws.tfplan  -lock=false -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
         continue-on-error: ${{ fromJSON(env.continue) }}
         timeout-minutes: ${{ fromJSON(env.time) }}
 
